ajax마무리, jquery변환

--- a/ajax/movie.html
+++ b/ajax/movie.html
@@ -31,6 +31,9 @@
         font-size: 14px;
         text-align: left;
       }
+      .box3 ul {
+        list-style: none;
+      }
     </style>
   </head>
   <body>
