--- a/scriptsource/basic/var1.html
+++ b/scriptsource/basic/var1.html
@@ -26,7 +26,8 @@
 
         - 자바스크립트 라이브러리
             1) React
-            2) jQuery
+            2) jQuery : DOM 접근이 쉬움(2006년도)  / ajax 접근이 쉬움
+                        document.querySelect(".btn") ==> $(".btn")
 
 
         - 자바스크립트 선언 위치
